fix: range not value not showing on safari

--- a/webui-page/webui.css
+++ b/webui-page/webui.css
@@ -183,9 +183,9 @@ input[type="range"] {
  */
 ::-webkit-slider-thumb {
   -webkit-appearance: none;
-  width: 0; /* 1 */
-  height: 40px;
-  background: #fff;
+  width: 1; /* 1 */
+  height: 85px;
+  background: #999;
   box-shadow: -100vw 0 0 100vw var(--main-fg-color);
   border: 0 solid #999; /* 1 */
 }
